# postgresql-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  pytest.ini  requirements.txt
data/: 001_customers.sql  002_accounts.sql  003_transactions.sql  004_cards.sql  005_branches.sql  column_policy.json  policy.yaml  seed.sh
data/chroma/: chroma.sqlite3
data/db/: banking.db
data/examples/: 01_recent_customers.md  02_suspended_customers.md  03_customer_accounts_balance.md  04_transaction_history_with_category.md  05_spending_by_merchant_category.md  06_credit_card_transactions_with_merchant.md  07_monthly_spending_trend.md  08_bill_payments_with_biller.md  09_transfers_by_beneficiary.md  100_full_customer_profile.md  (+90 more)
docs/: ARCHITECTURE.md  PLAN.md  test_cases.md
tests/: conftest.py  test_audit_logger.py  test_base_service.py  test_catalog_blocker.py  test_column_policy.py  test_connection_manager.py  test_create_service.py  test_critical_patterns.py  test_delete_service.py  test_enable_write_tools.py  test_explain_guard.py  test_function_blocker.py  test_guardrails_pipeline.py  test_hardening.py  test_limit_guard.py  test_metadata_filter.py  test_metadata_service.py  test_pii_masker.py  test_query_rewriter.py  test_rate_limiter.py  test_read_service.py  test_result_budget.py  test_security_profile.py  test_security_validator.py  test_star_blocker.py  test_statement_guard.py  test_subquery_blocker.py  test_tautology.py  test_tools.py  test_update_service.py  test_user_context.py  test_where_sanitization.py
(+57 files in other folders)
