[project]
name = "postgresql-mcp-server"
version = "0.1.0"
description = "A FastMCP Server for PostgreSQL — schema inspection, metadata retrieval, and safe query execution for AI agents."
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.10.1",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
